<resources>
    <string name="app_name">Endurance OAGB</string>
    <string name="tab_text_1">Hátralevő</string>
    <string name="tab_text_2">Lefutott</string>
    <string name="nameTeam">Csapatnév</string>
    <string name="teams">Csapatok</string>
    <string name="races">Versenyek</string>
    <string name="nameRace">Verseny neve</string>
    <string name="location">Helyszín</string>
    <string name="numberOfTeam">Csapatszám</string>
    <string name="newRace">Új verseny hozzáadása</string>
    <string name="button_ok">OK</string>
    <string name="button_megse">Mégse</string>
    <string name="name_race">Verseny neve/száma</string>
    <string name="numberOfTeams">Hány csapat indul?</string>
    <string name="hasRaceDone">Lefutott már a verseny?</string>
    <string name="newTeam">Új csapat felvétele</string>
    <string name="teamNumber">Csapat sorszáma</string>
    <string name="warning">Figyelem!</string>
    <string name="validAll">Hibásan töltötted ki, próbáld meg újra! 1–3 fő közötti versenyző számot adj meg!</string>
    <string name="newDriver">Új versenyző felvétele</string>
    <string name="weightDriver">Súly</string>
    <string name="nameDriver">Versenyző neve</string>
    <string name="drivers">Versenyzők</string>
    <string name="numberStint">Etap száma</string>
    <string name="stints">Etapok</string>
    <string name="hasStintReady">"Létrejöttek már az etapok?"</string>
    <string name="weightPlus">Plusz súly</string>
    <string name="info">megjegyzés</string>
    <string name="infoText">Megjegyzés:</string>
    <string name="detailsStint">Cserék</string>
    <string name="numberOfStint">Etap száma</string>
    <string name="newStint">Etap felvétele</string>
    <string name="etc">Megjegyzés</string>
    <string name="others">Egyéb nézetek</string>
    <string name="teamsCheck">Ellenőrzés csapatonként</string>
    <string name="teamsDetailsCheck">Csapat etapjai - ellenőrzés</string>
    <string name="allCheck">Ellenőrzés - jelenlegi állás szerint</string>
    <string name="allFinalCheck">Végső ellenőrzés</string>
    <string name="checkFinal">Állapot</string>
    <string name="people">Hány versenyző van a csapatban?</string>
    <string name="notRace">Ezt a versenyt nem választhatod ki, amíg a korábbi versenyeknek nincsen vége!</string>
    <string name="doneAddTeam">Felvettél minden csapatot már, többet nem adhatsz hozzá!</string>
    <string name="notTeamsDone">Még nincs meg minden csapat, előbb hozd őket létre!</string>
    <string name="notDriversDone">Még nincs meg minden versenyző, előbb hozd létre őket!</string>
    <string name="notTeamsDriversDone">Még nem hoztál létre minden csapatot és versenyzőt, vagy nincs meg minden időmérős adat!</string>
    <string name="notStint">Ezt az etapot nem választhatod ki, amíg nem fejeződtek be a korábbiak!</string>
    <string name="noTeam">Egyelőre nincsen megjelenítendő csapat! Térj vissza korábbra!</string>
    <string name="doneAddDriver">Már minden versenyzőt felvettél ehhez a csapathoz, többet nem vehetsz fel!</string>
    <string name="noModify">Ezt az adatot már nem módosíthatod!</string>
    <string name="title_activity_stint2">StintActivity2</string>
    <string name="notAnymoreStint">Nincs több megjelenítendő etap!</string>
    <string name="style">Menüsor</string>
    <string name="home">Kezdőképernyő</string>
    <string name="race_items">Verseny nézetek</string>
    <string name="notAddDriver">Hiba! Valamilyen adatot nem írtál be!</string>
    <string name="quali">Időmérő</string>
    <string name="peopleTeam">A csapatban versenyzők száma</string>
    <string name="qualiResult">Csapat sorszáma</string>
    <string name="qualiKartNumber">Időmérős gokart szám</string>
    <string name="kartNumber">Gokartszám megadása</string>
    <string name="parkingKart">Első parkoló/csere gokart megadása</string>
    <string name="qualiNumber">Csapatszám és időmérős gokartszám megadása</string>
    <string name="yes">Igen</string>
    <string name="changeKart">Cseregép</string>
    <string name="startingList">Rajtlista</string>
    <string name="doneStint">Hiba! Előbb állítsd be az összes versenyzőt és gokartszámát!</string>
    <string name="technicalProblem">Műszaki hiba</string>
    <string name="technicalProblemAlert">Műszaki hibás gokart megadása</string>
    <string name="technicalProblemKart">Műszaki hibás gokart és csapat</string>
    <string name="zeroToUp">Futóóra (fel)</string>
    <string name="upToZero">Futóóra (le)</string>
    <string name="notGoodTeamsNumber">Hiba! Adj meg 5–11 közötti csapatszámot, illetve adj meg nevet, valamint helyszínt a versenynek!</string>
    <string name="alreadyContains">Ilyen sorszámú csapat már létezik! Próbáld újra!</string>
    <string name="giveNormalTeamNumber">Ezt a sorszámot nem adhatod csapatnak! Próbáld újra!</string>
    <string name="giveNormalNumber">Ilyen sorszámú csapat vagy ilyen gokart nem létezik!</string>
    <string name="alreadyContainsKart">Ez a gokart már más csapaté!</string>
    <string name="notGiveAnything">Nem adtál meg semmilyen adatot!</string>
    <string name="giveNormalKart">Ilyen gokart nem létezik!</string>
    <string name="modifyRace">Verseny módosítása</string>
    <string name="notModifyRace">A verseny adatait már nem módosíthatod!</string>
    <string name="validNot">Hibásan töltötted ki!</string>
    <string name="modifyDriver">Versenyző módosítása</string>
    <string name="notValidDriver">Hiba! Valamit elrontottál, így nem módosult a versenyző!</string>
    <string name="addDriverDone">Felvettél minden versenyzőt</string>
    <string name="fail">Hiba történt!</string>
    <string name="kartNumberCheck">Gokartszám</string>
    <string name="technicalProblemTips">Versenyző és súly megadása</string>
    <string name="modifyRaceTips">Verseny adatainak módosítása</string>
    <string name="qualiTips">Csapatszám és gépszám megadása</string>
    <string name="warn">Vedd fel a versenyzőket!</string>
    <string name="technicalProblemDialog">Műszaki hiba esetén cseregokart megadása</string>
    <string name="specialWeight">Egyéni plusz súly megadása</string>
    <string name="validSpecial">Hiba! Nem adódott hozzá a súly, kezdd újra!</string>
    <string name="notMoreStint">Nincs már több etap!</string>
    <string name="notMoreRace">Hozz létre egy versenyt!</string>
    <string name="stopper">Stopperórák</string>
    <string name="coming">Érkezik:</string>
    <string name="startRace">Versenyből hátralévő idő</string>
    <string name="gp2Cat">GP2-es kategóriában érdekelt a csapat?</string>
    <string name="gp2">GP2</string>
    <string name="result">Végeredmény</string>
    <string name="place">Hely</string>
    <string name="resultPlace">Helyezés</string>
    <string name="placeHolder">Végeredmény megadása</string>
    <string name="podium">Dobogósok</string>
    <string name="abs">Abszolút</string>
    <string name="login">Bejelentkezés</string>
    <string name="signInWithGoogle">Jelentkezz be Google-fiókoddal!</string>
    <string name="signOut">Kijelentkezés</string>
    <string name="actual_race">Aktuális verseny:</string>
    <string name="actualRace">Szeretnéd, hogy ez legyen kijelölve, mint aktuális verseny?</string>
    <string name="actualRaceCb">Aktuális verseny</string>
    <string name="no">Nem</string>
    <string name="loading">Betöltés...</string>
    <string name="allTeams">Az idei év csapatai</string>
    <string name="numberOfRaces">Indulások száma</string>
    <string name="doneAllDriver">Több versenyzőt már nem vehetsz fel!</string>
    <string name="notValid">Hiba történt!</string>
    <string name="allDrivers">A csapat összes idei versenyzője</string>
    <string name="notValidNumber">Hiba történt! Több személyt adtál meg, mint amennyi tagot tartalmaz a csapat!</string>
    <string name="changeTimeMin">Perc</string>
    <string name="changeTimeSec">Másodperc</string>
    <string name="changeTime">A csere körében teljesített kör ideje</string>
    <string name="avgWeight">Átlag súly</string>
    <string name="tab_text_main_1">Jelenlegi</string>
    <string name="tab_text_longer_1">Hátralévő etapok</string>
    <string name="tab_text_longer_2">Lefutott etapok</string>
    <string name="tab_text_main_race_1">Jelenlegi verseny</string>
    <string name="tab_text_main_race_2">Lefutott versenyek</string>
    <string name="name_race_number">Verseny száma</string>
    <string name="wrongGroup">Ilyen sorszámú csapat csak a másik csoportban lehetséges! Próbáld újra!</string>
    <string name="divideGroup">Csoportbontás</string>
    <string name="parkingKart12">Az 1. csoport 1. csere gokartjának a száma</string>
    <string name="firstgroupfirst">Az 1. csoport 1. cseregokartjának megadása</string>
    <string name="secondgroupfirst">A 2. csoport 1. cseregokartjának megadása</string>
    <string name="secondgroupsecond">A 2. csoport 2. cseregokartjának megadása</string>
    <string name="firstgroupsecond">Az 1. csoport 2. cseregokartjának megadása</string>
    <string name="parkingKarts">Első cseregokartok megadása csoportonként</string>
    <string name="qualiResultEnd">Időmérő edzés végeredménye</string>
    <string name="startTime">A verseny rajtjának a megadása</string>
    <string name="hour">Óra</string>
    <string name="minutes">Perc</string>
    <string name="seconds">Másodperc</string>
    <string name="milliseconds">Ezredmásodperc</string>
    <string name="qualiResults">Az időmérő eredménye</string>
    <string name="placeHolderQuali">Időmérő eredmény megadása</string>
    <string name="importTeams">Csapatok importálása</string>
    <string name="startKartNumber">Rajtolós gokart szám</string>
    <string name="qualiNumberFragment">Időmérős gokartszám megadása</string>
    <string name="startKartNumberFragment">Rajtolós gokart szám megadása</string>
    <string name="default_web_client_id">511625415336-0d5s36kjmg6cptuseomplulssftf836d.apps.googleusercontent.com</string>
    <string name="if10Teams">Ha 10 csapat indul, akkor egy gépparkot kapjon mindenki?</string>
    <string name="teamsTogether">Mindenki ugyanazokkal menjen</string>
    <string name="allSame">Mindenki egy közös gépparkkal menjen?</string>
    <string name="qualiStints">Időmérő etapok</string>
    <string name="newQuali">Új időmérő felvétele</string>
    <string name="refresh">Frissítés</string>
</resources>