<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_style"
        android:checkableBehavior="single"
        android:icon="@drawable/ic_three_lines"
        android:title="@string/style"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_home"
                android:checked="false"
                android:title="@string/home" />
            <item
                android:id="@+id/menu_etc"
                android:checked="false"
                android:title="@string/race_items" />
            <item
                android:id="@+id/menu_import"
                android:checked="false"
                android:title="@string/importTeams" />
        </menu>
    </item>
</menu>