<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tvPlacePodium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="45sp"
        tools:text="@string/place" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNamePodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textSize="50sp"
            tools:text="@string/nameTeam" />
        <TextView
            android:id="@+id/tvDriversPodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:textSize="30sp"
            tools:text="@string/drivers"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="68dp"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"/>


    </LinearLayout>

</LinearLayout>